--- a/src/main/resources/templates/turnos/confirmacion.html
+++ b/src/main/resources/templates/turnos/confirmacion.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-	    <meta charset="UTF-8">
-	    <title>Confirmación</title>
-	</head>
-	<body>
-	    <h1 th:text="${mensaje}">Turno generado</h1>
-	
-	    <a th:href="@{/turnos/GenerarTurno}">Generar otro turno</a>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Confirmación</title>
+</head>
+<body>
+    <h1 th:if="${mensaje}" th:text="${mensaje}">Turno generado</h1>
+
+    <a th:href="@{/turnos/GenerarTurno}">Generar otro turno</a>
+</body>
 </html>
