--- a/src/main/resources/templates/turnos/list.html
+++ b/src/main/resources/templates/turnos/list.html
@@ -15,22 +15,20 @@
 <form method="get" th:action="@{/turnos/list}">
 
     <label>Cliente:</label>
-    <select name="clienteId">
-        <option value="">-- Seleccione Cliente --</option>
-        <option th:each="cliente : ${clientes}" 
-                th:value="${cliente.id}" 
-                th:text="${cliente.nombre}"
-                th:selected="${cliente.id == clienteId}">Cliente</option>
-    </select>
+	<select name="clienteId">
+	    <option value="">-- Seleccione Cliente --</option>
+	    <th:block th:each="cliente : ${clientes}">
+	        <option th:value="${cliente.id}" th:text="${cliente.nombreCompleto}"></option>
+	    </th:block>
+	</select>
 
     <label>Empleado:</label>
-    <select name="empleadoId">
-        <option value="">-- Seleccione Empleado --</option>
-        <option th:each="empleado : ${empleados}" 
-                th:value="${empleado.id}" 
-                th:text="${empleado.nombre}"
-                th:selected="${empleado.id == empleadoId}">Empleado</option>
-    </select>
+	<select name="empleadoId">
+	    <option value="">-- Seleccione Empleado --</option>
+	    <th:block th:each="empleado : ${empleados}">
+	        <option th:value="${empleado.id}" th:text="${empleado.nombreCompleto}"></option>
+	    </th:block>
+	</select>
 
     <label>Servicio:</label>
     <select name="servicioId">
@@ -73,8 +71,8 @@
         <td th:text="${turno.clienteNombre}">Cliente</td>
         <td th:text="${turno.empleadoNombre}">Empleado</td>
         <td th:text="${turno.servicioNombre}">Servicio</td>
-        <td th:text="${turno.dia.fecha}">Día</td>
-        <td th:text="${turno.hora.hora}">Hora</td>
+		<td th:text="${#temporals.format(turno.dia, 'dd/MM/yyyy')}">Día</td>
+		    <td th:text="${#temporals.format(turno.hora, 'HH:mm')}">Hora</td>
     </tr>
     </tbody>
 </table>
