--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -11,10 +11,9 @@
         <button type="submit">Logout</button>
     </form>
 
-    <a th:href="@{/grupo3/list}">Ver informacion de ejemplo</a>
+    <a th:href="@{/empleados/list}">Ver empleados</a>
+	<a th:href="@{/especialidades/list}">Ver especialidades</a>
 
-    <div sec:authorize="hasRole('ADMIN')">
-        <a th:href="@{/grupo3/form}">Agregar nueva informacion de ejemplo</a>
-    </div>
+
 </body>
 </html>
