--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -13,7 +13,9 @@
 
     <a th:href="@{/empleados/list}">Ver empleados</a>
 	<a th:href="@{/especialidades/list}">Ver especialidades</a>
-
+	<a th:href="@{/cliente/list}">Ver clientes</a>
+	<a th:href="@{/turnos/list}">Ver turnos</a>
+	<a th:href="@{/turnos/GenerarTurno}">Generar turnos</a>
 
 </body>
 </html>
