--- a/src/main/resources/templates/cliente/list.html
+++ b/src/main/resources/templates/cliente/list.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Lista de Clientes</h1>
-    <a th:href="@{/cliente/nuevo}">Agregar nuevo cliente</a>
+    <a th:href="@{/cliente/guardar}">Agregar nuevo cliente</a>
     <table>
         <tr>
             <th>DNI</th>
