--- a/src/main/resources/templates/especialidades/list.html
+++ b/src/main/resources/templates/especialidades/list.html
@@ -13,6 +13,12 @@
 	
     <div class="container mt-4">
         <h1>Especialidades</h1>
+		
+
+		<div th:if="${errorMessage}" class="error">
+		    <p th:text="${errorMessage}"></p>
+		</div>
+
         
         <a class="btn btn-primary mb-3" th:href="@{/especialidades/form}">Nueva Especialidad</a>
         
