--- a/src/main/resources/templates/ubicaciones/form.html
+++ b/src/main/resources/templates/ubicaciones/form.html
@@ -27,7 +27,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Guardar Ubicación</button>
-        <a href="/servicios/form" class="btn btn-secondary ms-2">Volver</a>
+        <a th:href="@{/ubicaciones/list}" class="btn btn-secondary ms-2">Volver</a>
     </form>
 </div>
 
